--- a/frontend/src/components/task/style.css
+++ b/frontend/src/components/task/style.css
@@ -1,23 +1,50 @@
-.task{
+.task {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    position: relative;
     margin-bottom: 20px;
+    height: 100%;
 }
 
-.task-message{
+.task-message {
     width: 100%;
-    
-}
-.task-input-message{
-    padding-left: 20px;
 }
 
-.icons{
+/* .task{
+    position: absolute;
+    top: -69px;
+    width: 100%;
+    z-index: 1;
+} */
+
+.icons {
     display: flex;
     position: relative;
     right: 42px;
     height: 40px;
     align-items: center;
+    cursor: pointer;
+    width: 130px;
+    justify-content: space-around;
+}
+
+.task-input-message {
+    background-color: white;
+    width: 112%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    padding-left: 36px;
+    font-family: roboto;
+    font-size: 20px;
+    -webkit-box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px 5px 14px -5px rgba(34, 60, 80, 0.6);
+}
+
+
+.task-input-message:focus{
+    outline: none;
+    border: 1px solid rgb(48, 100, 214) ;
 }
